# Dataverse

./: .gitignore  README.md  Streamlit_app.py  api.py  main.py  pyproject.toml
data/: exploration.html  exploration.ipynb  features.parquet  features_classification.parquet  predictions.parquet
doc/: 1_read_this.md  features.md  features_xgb.md
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  index.css
impact_measurement_kit_/: DOC_RSE.md  READ_RSE.md  aggregate_results.py  benchmark_inference.py  capacity_cost_template.py  compare_rse_models.sh  estimate_lca_impacts.py  hardware_inventory_template.yaml  impact_campaign.py  lca_factors_example.yaml  measure_utils.py
impact_measurement_kit_/impact_runs/: build_dataset_meta.json  infer_1000_alerts_meta.json  (+3 more)
others/: 2Amodels_roc_comparison.py  2Amodels_roc_comparison_hyper.py  run_baseline_classifier.py
src/: 2Amodels_roc_comparison_hyper.py  analyse_false_all_clear.py  analyze_ic_after_cg.py  analyze_long_alerts.py  build_sequential_dataset.py  build_sequential_dataset1.py  build_silence_dataset.py  build_silence_dataset1.py  compute_pause_thresholds.py  create_plots.py  evaluate.py  evaluate_xgb.py  features.py  features_snapshot.py  global_roc_comparison.py  main.py  main_plots.py  make_datasets_variants.py  model.py  model_xgb.py  optimize_threshold.py  optimize_threshold_xgb.py  predict.py  predict_xgb.py  test_baseline_tslcg.py  theta_analysis.py  theta_analysis_logistic.py  theta_analysis_xgboost.py  train_xgb.py  tune_rsf.py  xgboost_onall.py
(+19 files in other folders)
