[project]
name = "dataverse"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "altair<5",
    "codecarbon>=3.2.5",
    "fastapi>=0.135.2",
    "joblib>=1.5.3",
    "jupyter>=1.1.1",
    "lifelines>=0.30.0",
    "matplotlib>=3.10.8",
    "numpy>=2.4.2",
    "pandas>=3.0.1",
    "psutil>=7.2.2",
    "pyarrow>=23.0.1",
    "python-multipart>=0.0.22",
    "pyyaml>=6.0.3",
    "ruff>=0.15.5",
    "scikit-learn>=1.8.0",
    "scikit-survival>=0.27.0",
    "streamlit>=1.19.0",
    "uvicorn>=0.42.0",
    "xgboost>=3.2.0",
]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
]
